--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chopstick",
-  "version": "1.0.12",
-  "description": "一个人失忆了，连饭怎么吃都忘了。  \r 我们先教他吃饭，不需要跟他解释人为什么要吃饭，不需要跟他介绍川菜或者淮扬菜的特点或区别，也不需要告诉他各餐具的特点以“方便”他自由选择。  \r 也许需要做的，只是在你吃饭的时候，提醒他也过来，并且拿起你自己常用的餐具（筷子或刀叉），和你吃一样的饭",
+  "version": "1.1.1",
+  "description": "你只需要一双筷子",
   "main": "src/index.js",
   "scripts": {
     "test": "nodemon ./test/index.js",
