--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chopstick",
-  "version": "3.0.3",
+  "version": "4.0.0",
   "description": "你只需要一双筷子",
   "main": "src/index.js",
   "scripts": {
@@ -23,6 +23,6 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "wear-glove": "^2.0.1"
+    "wear-glove": ">= 3.0.0"
   }
 }
