--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kuaizi",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "你只需要一双筷子",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daGaiGuanYu/chopstick.git"
