手套 -> 三明治

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/daGaiGuanYu/chopstick#readme",
   "dependencies": {
-    "wear-glove": ">= 3.0.0"
+    "swch": ">= 1.0.0"
   }
 }
